--- a/src/app/component/user-devices/user-devices.component.css
+++ b/src/app/component/user-devices/user-devices.component.css
@@ -16,7 +16,6 @@
   button {
     margin-left: 3px;
     margin-right: 3px;
-    line-height: inherit;
   }
   .flex-container {
     /* We first create a flex layout context */
@@ -67,4 +66,14 @@
   }
   .sensorLabel {
     color: gray;
+  }
+  ::ng-deep [role=gridcell] {
+    line-height: inherit !important;
+  }
+  ::ng-deep [role=columnheader] {
+    height: 60%;
+  }
+  ::ng-deep [ref=headerRoot] {
+    height: 29px !important;
+    min-height: 29px !important;
   }
