--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,6 @@ body { width: 100%; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif
   pointer-events:auto;
   cursor:pointer;
 }
+button {
+  line-height: inherit !important;
+}
